# hololive-app

./: .gitignore  Makefile  NOTICE.md  README.md  android_build_log.txt  build_android.txt  build_windows.txt  index.html  oauth_callback.html  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
.agent/workflows/: comment-rule.md
docs/: BOT_FEATURES.MD  CHANNEL_PROFILE_API_FRONTEND.md  FRONTEND_HOURS_PARAM.md  IMPLEMENTAION_PLAN.MD  PERFORMANCE_OPTIMIZATION_TODO.md  TODO.md  http spec.md
keys/: keys
scripts/: bump-version.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build_log.txt  clippy.toml  clippy_output2.txt  error_detail.txt  error_full.txt  profile_test.txt  rustfmt.toml  tauri.conf.json  test_output.txt  test_result.txt
src-tauri/capabilities/: default.json  localhost.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: channels.rs  client.rs  error.rs  members.rs  mod.rs  profiles.rs  session_auth.rs  streams.rs
src-tauri/src/auth/: mod.rs  storage.rs  types.rs
src-tauri/src/commands/: alarms.rs  auth.rs  channels.rs  history.rs  members.rs  mod.rs  multiview.rs  session_auth.rs  settings.rs  streams.rs
src-tauri/src/db/: alarms.rs  cache.rs  connection.rs  history.rs  migrations.rs  mod.rs  multiview.rs  settings.rs
src-tauri/src/models/: alarm.rs  channel.rs  member.rs  mod.rs  multiview.rs  settings.rs  stream.rs
src-tauri/src/multiview/: encoding.rs  mod.rs  presets.rs  validation.rs
src-tauri/src/scheduler/: mod.rs
src/api/: queryKeys.ts  tauri.ts
src/components/: Layout.tsx  MemberCard.tsx  ProtectedRoute.tsx  StreamCard.tsx  StreamListItem.tsx  UserMenu.tsx
src/components/auth/: AuthModal.tsx  LoginForm.tsx  RegisterForm.tsx
src/components/layout/: PageTransition.tsx
src/components/multiview/: EmptyCell.tsx  GridCell.tsx  MultiviewGrid.tsx  MultiviewPage.tsx  MultiviewSkeleton.tsx  MultiviewToolbar.tsx  PresetSelector.tsx  VideoCell.tsx  VideoSelectorDialog.tsx  YouTubePlayer.tsx
src/components/ui/: AlertModal.tsx  Badge.tsx  BaseModal.tsx  Button.tsx  Card.tsx  StatCard.tsx  Toast.tsx
src/data/: presets.ts
src/hooks/: useContainerSize.ts  useHoloQueries.ts  useMultiviewQueries.ts  usePlayerPool.tsx  useResponsiveGridConfig.ts  useSessionAutoRefresh.ts  useSessionExpiredListener.ts  useSessionRestore.ts
src/lib/: i18n.ts  imageOptimizer.ts  validation.ts
src/pages/: AlarmsPage.tsx  DashboardPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  MembersPage.tsx  RegisterPage.tsx  SettingsPage.tsx
src/stores/: authStore.ts  modalStore.ts  multiviewStore.ts  sessionAuthStore.ts  sidebarStore.ts
src/types/: index.ts  multiview.ts
src/utils/: layoutReconciler.ts
